--- a/STYLE.CSS
+++ b/STYLE.CSS
@@ -43,4 +43,11 @@ h1, h2 { text-align: center; }
       border: none;
        border-radius: 4px; 
        cursor: pointer; }
+
+#rainbow-div {
+  width: 200px;
+  height: 20px;
+  background-image: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+}
+   
    
