--- a/STYLE.CSS
+++ b/STYLE.CSS
@@ -1,8 +1,6 @@
 body { font-family: Arial,
    sans-serif;
-   margin: 0;
-   background-image: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
-}
+   margin: 0;}
 
 
 h1, h2 { text-align: center; }
